2009-11-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR fortran/41278
	* trans-array.c (gfc_conv_array_transpose): Delete unnecessary assert.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154680 138bc75d-0d04-0410-961f-82ee72b054a4