gcc/fortran/trans-array.c
@@ -850,7 +850,6 @@ gfc_conv_array_transpose (gfc_se * se, gfc_expr * expr)
   src_info = &src_ss->data.info;
   dest_info = &dest_ss->data.info;
   gcc_assert (dest_info->dimen == 2);
-  gcc_assert (src_info->dimen == 2);
 
   /* Get a descriptor for EXPR.  */
   gfc_init_se (&src_se, NULL);
